--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,15 @@
 h1 {
   color:#ff0000;
+  font-size: 30px;
+  background-color: #f3f372;
+  height: 80px;
+  widht: 100px;
 }
 
 p {
   color:#0000ff;
 }
+
+img {
+  height: 50px;
+  width: 70px;
