--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,9 +7,9 @@ h1 {
 }
 
 h2 {
-  color: #ffffff;
+  color: #053B50;
   font-size: 20px;
-  background-color: #f4f499;
+  background-color: #64CCC5;
   height: 20px;
   widht: 100px;
 }
