--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 h1 {
-  color:#ff0000;
+  color:#EEEEEE;
   font-size: 30px;
-  background-color: #f3f372;
+  background-color: #053B50;
   height: 40px;
   widht: 100px;
 }
@@ -10,12 +10,12 @@ h2 {
   color: #053B50;
   font-size: 20px;
   background-color: #64CCC5;
-  height: 20px;
+  height: 30px;
   widht: 100px;
 }
 
 p {
-  color:#0000ff;
+  color:#176B87;
 }
 
 img {
