--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,18 +23,34 @@ img {
   width: 70px;
 }
 
-li {
-  color: #053B50;
-}
-.selected{
-  color: #64CCC5;
+body {
+  font-family: "Avenir Next";
 }
 
 li {
   list-style: none;
   float: left;
+  padding: 33px 20px;
 }
+
+.header {
+  background-color: #26d0c9;
+  color: #fff;
+  height: 90px;
+}
+
 .header-logo {
-  font-size: 36px;
   float: left;
+  font-size: 36px;
+  padding: 20px 40px;
+}
+
+.main {
+  background-color: #bdf7f1;
+  height: 600px;
+}
+
+.footer {
+  background-color: #ceccf3;
+  height: 270px;
 }
