--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,6 +26,7 @@ a {
   background-image: url(https://prog-8.com/images/html/advanced/top_en.png);
   background-size: cover;
   color: white;
+  text-align: center;
 }
 
 .top-wrapper h1 {
@@ -44,7 +45,12 @@ a {
   padding: 12px 24px;
   color: white;
   display: inline-block;
-  opacity: 0.8;  
+  opacity: 0.8;
+  border-radius: 4px;
+}
+
+.btn:hover {
+  opacity: 1;
 }
 
 .signup {
@@ -68,6 +74,60 @@ a {
   margin: 10px 0;
 }
 
+.fa {
+  margin-right: 5px;
+}
+
+header {
+  height: 65px;
+  width: 100%;
+  background-color: rgba(34, 49, 52, 0.9);
+  position: fixed;
+  top: 0;
+  z-index: 10;
+}
+
+.logo {
+  width: 124px;
+  margin-top: 20px;
+}
+
+.header-left {
+  float: left;
+}
+
+.header-right {
+  float: right;
+  background-color: rgba(255, 255, 255, 0.3);
+  transition: all 0.5s;
+}
+
+.header-right:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.header-right a {
+  line-height: 65px;
+  padding: 0 25px;
+  color: white;
+  display: block;
+}
+
+.lesson-wrapper {
+  height: 500px;
+  padding-bottom: 80px;
+  background-color: #f7f7f7;
+}
+
+.heading {
+  padding-top: 60px;
+  padding-bottom: 30px;
+  color: #5f5d60;
+}
+
+.heading h2 {
+  font-weight: normal;
+}
 
 .header {
   background-color: #183D3D;
@@ -118,7 +178,7 @@ a {
 }
 
 .contents {
-  height: 500px;
+  height: 100px;
   margin-top: 100px;
 }
 
